--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
     <main>
         <div>
             <input type="text" id="searchBox">
-            <button onclick="searchData(data)">Buscar</button>
-            <div class="element" id="showData"></div>
-            <div class="element" id="showData"></div>
-            <div class="element" id="showData"></div>
-            <div class="element" id="showData"></div>
-            <div class="element" id="showData"></div>
-            <div class="element" id="showData"></div>
-            <div class="element" id="showData"></div>
-            <div class="element" id="showData"></div>
+            <button onclick="searchDataArray(data)">Buscar en Arreglo de Datos</button>
+            <button onclick="searchDataBinaryTree()">Buscar en Árbol Binario</button>
+            <div class="charactersDataDiv" id="charactersDataDiv"></div>
         </div>
     </main>
 </body>
