--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Star Wars Characters</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <header></header>
     <main>
         <div>
-            <input type="text" id="searchBox">
-            <button onclick="searchDataArray(data)">Buscar en Arreglo de Datos</button>
-            <button onclick="searchDataBinaryTree()">Buscar en Árbol Binario</button>
+            <div class="titleDiv"">
+                <h1>Star Wars Characters</h1>
+            </div>
+            <div class="searchDiv">
+                <input type="text" id="searchBox" placeholder="Type something..." size="40">
+                <button onclick="searchDataArray(data)">Search</button>
+                <!-- <button onclick="searchDataBinaryTree()">Buscar en Árbol Binario</button> -->
+            </div>
             <div class="charactersDataDiv" id="charactersDataDiv"></div>
+            <div id="resultDiv" class="resultDiv"></div>
         </div>
     </main>
 </body>
