--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Star Wars Characters</h1>
             </div>
             <div class="searchDiv">
-                <input type="text" id="searchBox" placeholder="Type something..." size="40">
+                <input type="text" id="searchBox" placeholder="Type something..." size="40" oninput="searchDataArray(data)">
                 <button onclick="searchDataArray(data)">Search</button>
                 <!-- <button onclick="searchDataBinaryTree()">Buscar en Árbol Binario</button> -->
             </div>
