--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="searchDiv">
                 <input type="text" id="searchBox" placeholder="Type something..." size="40" oninput="searchDataArray(data)">
-                <button onchange="searchDataArray(data)">Search</button>
+                <!-- <button onchange="searchDataArray(data)">Search</button> -->
                 <!-- <button onclick="searchDataBinaryTree()">Buscar en Árbol Binario</button> -->
             </div>
             <div class="charactersDataDiv" id="charactersDataDiv"></div>
